force-app/main/default/objects/Dashboard_Tab_Config__mdt/Dashboard_Tab_Config__mdt.object-meta.xml
<CustomObject>
    <label>Dashboard Tab Config</label>
    <pluralLabel>Dashboard Tab Configs</pluralLabel>
</CustomObject>