force-app/main/default/objects/Dashboard_Tab_Config__mdt/fields/Allowed_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Profiles__c</fullName>
    <label>Allowed Profiles</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>