force-app/main/default/objects/Dashboard_Tab_Config__mdt/fields/Empty_State_Text__c.field-meta.xml
<CustomField>
    <fullName>Empty_State_Text__c</fullName>
    <label>Empty State Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>