force-app/main/default/objects/Dashboard_Tab_Config__mdt/fields/Show_Badge_Count__c.field-meta.xml
<CustomField>
    <fullName>Show_Badge_Count__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Badge Count</label>
    <type>Checkbox</type>
</CustomField>