force-app/main/default/objects/Dashboard_Tab_Config__mdt/fields/SObject_Names__c.field-meta.xml
<CustomField>
    <fullName>SObject_Names__c</fullName>
    <label>SObject Names</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>