force-app/main/default/objects/Dashboard_Tab_Config__mdt/fields/Status_Actions_JSON__c.field-meta.xml
<CustomField>
    <fullName>Status_Actions_JSON__c</fullName>
    <label>Status Actions JSON</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>