force-app/main/default/objects/Dashboard_Tab_Config__mdt/fields/Tab_Key__c.field-meta.xml
<CustomField>
    <fullName>Tab_Key__c</fullName>
    <label>Tab Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>