force-app/main/default/objects/Dashboard_Tab_Config__mdt/fields/Tab_Name__c.field-meta.xml
<CustomField>
    <fullName>Tab_Name__c</fullName>
    <label>Tab Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>